# 42subject

./: るーれっと.py
.omc/: project-memory.json
.omc/sessions/: 0cb020b8-71e8-43bc-a8c3-ba215c5a3430.json  2c0cc893-78e8-4dab-991a-6d2d30a88b39.json  80adddec-9d20-418e-a419-362ba25f7354.json  928a0cf3-0a70-4314-8d8f-c081e7573d79.json  968591a0-c6ad-4d2b-8971-b47e3fbe2215.json  a6c848b0-ff6c-4e22-9362-23d6d40894da.json  (+2 more)
Flyin/: .flake8  .gitignore  DESIGN.md  Makefile  pyproject.toml
Flyin/flyin/: __init__.py
Flyin/flyin/adapters/parsing/: errors.py
Flyin/flyin/domain/: connection.py  network.py  zone.py
Flyin/tests/: test_connection.py  test_network.py  test_parser.py  test_zone.py
GetNextLine/: ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_strlcat.c  ft_strncmp.c
RAG/: .flake8  .gitignore  .venv  DESIGN.md  Makefile  README.md  pyproject.toml  subject_ja.md
RAG/src/student/: __init__.py  __main__.py  api.py  cli.py  config.py  models.py
RAG/src/student/evaluation/: recall.py
RAG/src/student/generation/: llm.py  ollama_llm.py  prompt.py
RAG/src/student/ingestion/: chunker.py  embed_indexer.py  indexer.py  pdf_loader.py  walker.py
RAG/src/student/retrieval/: dense_retriever.py  embeddings.py  hybrid_retriever.py  retriever.py
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_bonus.c  ft_printf_bonus.h  ft_printf_char_bonus.c  ft_printf_hex_bonus.c  ft_printf_int_bonus.c  ft_printf_internal.h  ft_printf_nbr.c  ft_printf_num_bonus.c  ft_printf_num_bonus.h  ft_printf_pad_bonus.c  ft_printf_parse_bonus.c  ft_printf_ptr_bonus.c  ft_printf_uint_bonus.c  ft_printf_utils.c  ft_printf_utils_bonus.c  ft_putchar.c  ft_puthex.c  ft_putnbr.c  main  main.c
libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcpy.c  ft_strmapi.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  isdigit.c  libft.h  main.c  test_ft
libft.a/: Makefile  README.md  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
python_module1/: test.py
python_module6/: elements.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py
python_module7/: battle.py  capacitor.py  tournament.py
python_module8/ex1/: loading.py  pyproject.toml  requirements.txt
python_module9/: validate_data.py
test/: ftmemcpy.c  ftmemset.c  strdup.c
(+143 files in other folders)
