[project]
name = "Fly-in"
version = "0.1.0"
description = "Efficient multi-drone routing simulation"
requiress-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["flake8", "mypy", "pytest"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
chek_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["test]

[flake8]
max-line-length = 88
extend-ignore = "E203,"
exclude = .venv, __pycache__, .mypy_cache, .pytest_cache
