[project]
name = "flyin"
version = "0.1.0"
description = "Efficient multi-drone routing simulation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["flake8", "mypy", "pytest"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
