[project]
name = "student"
version = "0.1.0"
description = "RAG against the machine — vLLM コーパス検索・回答システム"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "fire>=0.6",
    "bm25s>=0.2",
    "numpy",
    "tqdm",
    "transformers>=4.51",
    "torch>=2.2",
    "accelerate>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.4",
    "flake8>=7.0",
]
bonus = [
    "qdrant-client>=1.7",
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "httpx>=0.27",
    "pypdf>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ['^\.venv/', '^data/', '^build/', '^dist/']
