[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis tool demonstrating Poetry vs pip."
authors = ["hidenori <hidenoriaku@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1"
numpy = "^1.26"
matplotlib = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
